# worthless

./: .coderabbit.yaml  .dockerignore  .dockleignore  .gitignore  .gitleaks.toml  .grype.yaml  .mailmap  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .trivyignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING-security.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  SECURITY_POSTURE.md  SECURITY_RULES.md  SKILL.md  TESTING.md  TESTSPRITE_DNS_FIX.md  VERSIONING.md  WOR-455-phase-1-plan.md  WOR-455-phase-2-4-runbook.md  astro.config.mjs  index.html  install.sh  package-lock.json  package.json  pr-test-summary.md  pyproject.toml  requirements.txt  script.js  sonar-project.properties  style.css  uninstall.sh  wave6-prompt.md  (+2 more)
.beads/: .beads-credential-key  dolt-server.activity  metadata.json  wor-276-commit-5-6-plan.md  wor-276-commit-5b-design.md  wor-276-execution-plan.md
.beads/hooks/: pre-commit
.github/: FUNDING.yml  dependabot.yml  labeler.yml  release.yml
.github/scripts/: test-verify-tag-multikey.sh  verify-pin.sh  verify-tag.sh  verify_commit_provenance.py
.github/workflows/: benchmarks.yml  black-duck-security-scan-ci.yml  copilot-review.yml  deploy-marketing.yml  deploy-website.yml  deploy-worker.yml  docker-security.yml  docs-spike.yml  flake-radar.yml  install-docker.yml  install-smoke.yml  labeler.yml  lint-marketing.yml  pip-audit-canary.yml  pre-release.yml  publish-docker.yml  publish-npm.yml  publish.yml  release-sync-check.yml  sast.yml  scheduled.yml  scorecard.yml  snyk-security.yml  sonarcloud.yml  tests.yml  user-flows.yml  verify-commit-provenance.yml  verify-npm.yml  verify-tag-test.yml  wire-attack-canary.yml  worker-url-smoke.yml  worker-vitest.yml  worker-wire-attacks.yml
.planning/: BACKLOG.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  WHY-NOT.md  WOR-405-CALM-REDESIGN-HANDOFF.md  c3ox-design.md  config.json  ghcr-publish-spec.md  handoff-wor207-phase2.md  launch-cleanup-plan.md  lessons.md  v1.0-MILESTONE-AUDIT.md  v1.1-triage-spec.md  wor-31-design-doc.md  wor-31-research-report.md  wor-31-security-review.md
.planning/archive/: v1.1-stress-test.md
.planning/bench/: spend-cap-rule-sqlite-vs-redis.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STATE_MACHINE.md  STRUCTURE.md  SYSTEM_DIAGRAM.md
.planning/docs/: SCENARIO-MATRIX.md  (+1 more)
.semgrep/: worthless-rules.yml
deploy/: docker-compose.env.example  docker-compose.yml  entrypoint.sh  railway.toml  redis-acl.conf.tmpl  render.yaml  start.py
docs/: CNAME  DOMAIN_PLAN.md  INSTALL_UX_SPEC.md  PROTOCOL.md  ai-docs-tools-research-2026.md  coming-soon.html  features.html  homepage.js  how-it-works.html  index.html  index.md  index.mdx  install-docker.md  install-github-actions.md  install-mcp.md  install-openclaw.md  install-security.md  install-self-hosted.md  install-solo.md  install-teams.md  install.html  ipc-contract.md  legal.css  llms.txt  memes.html  news-feed.json  privacy.html  recovery.md  robots.txt  security-model.md  security.md  sidecar-topology.md  sitemap.xml  terms.html  troubleshooting.md  uninstall-contract.md  uninstall.md  wor-307-handoff.md
docs-standalone/: optimization-plan.md  testsprite-app-requirements-research.md  testsprite-dev-experiences-research.md  testsprite-docs-research.md  testsprite-integration-handoff.md  testsprite-mcp-tools-research.md
engineering/: README.md  architecture.md  crypto-flows.md  dogfood-notes-worthless-sh.md  flows.md  ipc-contract.md  launch-legal-gate.md  lessons.md  modules.md  openclaw-integration-reference.md  operations.md  release-gates.md  sidecar-topology.md  tooling.md
examples/: mcp.json
marketing/: .assetsignore  404.html  _headers  coming-soon.html  features.html  how-it-works.html  index.html  install.html  llms.txt  memes.html  sitemap.xml
scripts/: bump-version.sh  check-coverage-floors.py  check_docs_versions.py  codewiki.sh  live_ceiling_override_demo.py  live_money_leak_demo.py  roadmap.py  smoke-test.sh  tag-release.sh  testsprite_harness.py  testsprite_instructions.md  testsprite_run.sh  verify-live-rig.sh  verify-wless-internal-removed.sh  wire-attack-probes.py
security-audit/: README.md  attack-map.md  data-flows.md  functionality-inventory.md  key-lock-threat-model.md  phase-2-batch-1-review.md  phase-2-batch-2-audit-review.md  phase-2-batch-2-chaos-review.md  phase-2-batch-2-pentest-review.md  phase-2-batch-3-chaos-review.md  phase-2-batch-3-jsreview.md  phase-2-batch-3-pentest-review.md  phase-2-batch-3-sre-review.md  phase-2-pen-test-additions.md  redteam-checklist.md  shard-data-flow-audit.md  sr-coverage-matrix.md  state-machines.md  threat-model-worthless-sh.md  tooling-evaluation.md
tests/: _docker_helpers.py  _install_helpers.py  bench_spend_cap_rule.py  conftest.py  helpers.py  mutmut_allowlist.md  quarantined_tests.txt  test_adapter_bytearray.py  test_adapters.py  test_adversarial.py  test_async.py  test_benchmarks.py  test_blackbox.py  test_bootstrap.py  test_bootstrap_keyring.py  test_ceiling_floor_and_stream_kills.py  test_check_proxy_health_adversarial.py  test_cli_adversarial_edge_cases.py  test_cli_bootstrap.py  test_cli_default.py  test_cli_down.py  test_cli_lock.py  test_cli_lock_already_locked.py  test_cli_lock_failclosed.py  test_cli_lock_scan_prompt.py  test_cli_notice.py  test_cli_revoke.py  test_cli_scan.py  test_cli_scan_code.py  test_cli_scan_failclosed.py  test_cli_security_hardening.py  test_cli_status.py  test_cli_unlock.py  test_cli_up.py  test_cli_user_experience.py  test_cli_windows_failfast.py  test_cli_wrap.py  test_code_scanner.py  test_config.py  test_console.py  (+111 more)
website/: ARCHITECTURE.md  PROTOCOL.md  features.html  homepage.js  how-it-works.html  index.html  install-mcp.md  install-openclaw.md  install-self-hosted.md  install-solo.md  install-teams.md  license.html  llms.txt  memes.html  news-feed.js  news-feed.json  news-feed.md  privacy.html  risk-key-material-in-python-memory.md  robots.txt  security.html  site.webmanifest  sitemap.xml  terms.html
(+688 files in other folders)
