[project]
name = "worthless"
version = "0.1.0"
description = "Split-key reverse proxy that makes API keys architecturally worthless to steal"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "aiosqlite>=0.22.1",
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "typer[all]>=0.15",
    "python-dotenv>=1.0",
]

[project.scripts]
worthless = "worthless.cli.app:app"

[project.optional-dependencies]
dev = [
    "deptry>=0.22",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
test = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.0",
    "pytest-console-scripts>=1.4",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=3.16",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.6",
    "respx>=0.22",
    "scipy>=1.12",
    "syrupy>=4.8",
]
qa = [
    "bandit>=1.8",
    "mutmut>=3.0",
    "pip-audit>=2.8",
    "schemathesis>=4.0",
    "semgrep>=1.155.0",
]
fuzz = [
    "atheris>=2.3",
]

[dependency-groups]
dev = [
    {include-group = "test"},
    "deptry>=0.22",
    "pre-commit>=4.0",
    "ruff>=0.8",
]
test = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.0",
    "pytest-console-scripts>=1.4",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=3.16",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.6",
    "respx>=0.22",
    "scipy>=1.12",
    "syrupy>=4.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
addopts = "--strict-config --strict-markers -n auto"
markers = [
    "benchmark: performance and latency regression checks",
    "contract: schema-driven API and protocol checks",
    "snapshot: request/response and stream shape snapshot checks",
    "integration: tests requiring live infrastructure or subprocesses",
    "slow: long-running statistical validation tests",
]

[tool.coverage.run]
branch = true
source = ["worthless"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"random".msg = "Use the 'secrets' module for cryptographic randomness. The 'random' module is banned (CRYP-04)."

[tool.deptry]
# Only scan src/ — dev/test/qa deps are CLI tools, not imported by app code
optional_dependencies_dev_groups = ["dev", "test", "qa", "fuzz"]
[tool.deptry.per_rule_ignores]
# starlette: transitive dep of fastapi, but we import ASGI types directly
# uvicorn: runtime ASGI server invoked via CLI, never imported
DEP002 = ["uvicorn"]
DEP003 = ["starlette"]

[tool.bandit]
targets = ["src"]

[tool.mutmut]
paths_to_mutate = [
    "src/worthless/adapters",
    "src/worthless/crypto",
]
also_copy = [
    "src/worthless/__init__.py",
    "src/worthless/exceptions.py",
    "src/worthless/cli",
    "src/worthless/proxy",
    "src/worthless/storage",
    "src/worthless.egg-info",
]
