[project]
name = "worthless"
version = "0.1.0"
description = "Split-key reverse proxy that makes leaked API keys worthless"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.5",
    "aiosqlite>=0.22.1",
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "typer[all]>=0.15",
    "python-dotenv>=1.0",
    "psutil>=5.9",
]

[project.scripts]
worthless = "worthless.cli.app:app"

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "deptry>=0.22",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.8",
]
test = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.0",
    "pytest-console-scripts>=1.4",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=3.16",
    "pytest-rerunfailures>=16.1",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.6",
    "respx>=0.22",
    "scipy>=1.12",
    "syrupy>=4.8",
    "tomli>=2.0; python_version < '3.11'",
]
qa = [
    "bandit[sarif]>=1.8",
    "mutmut>=3.0",
    "pip-audit>=2.8",
    "schemathesis>=4.0; python_version >= '3.11'",
    "semgrep>=1.155.0",
]
fuzz = [
    "atheris>=2.3",
]

[dependency-groups]
dev = [
    {include-group = "test"},
    "cyclonedx-bom>=7.3.0",
    "deptry>=0.22",
    "pip-audit>=2.8",
    "pip-licenses>=5.5.5",
    "pre-commit>=4.0",
    "pyright>=1.1",
    "ruff>=0.8",
    "vulture>=2.16",
    "xenon>=0.9.3",
]
test = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.0",
    "pytest-console-scripts>=1.4",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=3.16",
    "pytest-rerunfailures>=16.1",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.6",
    "respx>=0.22",
    "scipy>=1.12",
    "syrupy>=4.8",
    "tomli>=2.0; python_version < '3.11'",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
addopts = "--strict-config --strict-markers -n auto --dist loadscope --reruns 1"
markers = [
    "benchmark: performance and latency regression checks",
    "contract: schema-driven API and protocol checks",
    "snapshot: request/response and stream shape snapshot checks",
    "integration: tests requiring live infrastructure or subprocesses",
    "slow: long-running statistical validation tests",
    "quarantine: flaky tests under investigation (non-blocking in CI)",
    "live: tests hitting real LLM providers (requires API keys, costs money)",
    "adversarial: security-focused tests — race conditions, PID reuse, injection, fuzz",
    "docker: Docker container end-to-end tests (requires running Docker daemon)",
]

[tool.coverage.run]
branch = true
source = ["worthless"]
parallel = true
concurrency = ["thread"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "TID",  # flake8-tidy-imports (bans random module, CRYP-04)
    "S",    # flake8-bandit (SAST — mirrors bandit checks inline)
    "B",    # flake8-bugbear (subtle bugs: mutable defaults, assert in prod, etc.)
    "UP",   # pyupgrade (modern Python idioms, smaller attack surface)
    "PTH",  # flake8-use-pathlib (pathlib over os.path, avoids traversal surprises)
]
ignore = [
    # B008: Typer's API *requires* function calls in argument defaults (typer.Option, typer.Argument)
    # This is an intentional framework pattern, not a bug. See: https://typer.tiangolo.com/
    "B008",
    # S603: subprocess call with sys.executable + hardcoded args is not untrusted input.
    # All subprocess.Popen calls in this codebase use sys.executable with a fixed arg list.
    "S603",
    # S101: assert used as internal pre-condition guards (e.g. proc.stdout is not None),
    # not as user-facing validation. Acceptable in non-public internal helpers.
    "S101",
]

[tool.ruff.lint.per-file-ignores]
# Test files: assert is standard pytest style; S110 (try/except/pass) acceptable in test helpers
"tests/**" = ["S101", "S110", "B"]
# Docker e2e tests shell out to `docker` CLI extensively — partial path and /tmp are intentional
"tests/test_docker_e2e.py" = ["S607", "S108"]
# Deploy static tests use bash -n for entrypoint syntax validation
"tests/test_deploy_static.py" = ["S607"]
# Eval scripts shell out to claude CLI
"tests/evals/eval_skill_md.py" = ["S607"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"random".msg = "Use the 'secrets' module for cryptographic randomness. The 'random' module is banned (CRYP-04)."

[tool.deptry]
# Only scan src/ — dev/test/qa deps are CLI tools, not imported by app code
optional_dependencies_dev_groups = ["dev", "test", "qa", "fuzz"]
[tool.deptry.per_rule_ignores]
# uvicorn: runtime ASGI server invoked via CLI, never imported
# python-dotenv: planned refactor to replace custom parser (worthless-ic6)
DEP002 = ["uvicorn", "python-dotenv"]
# starlette: transitive dep of fastapi, but we import ASGI types directly
# rich: transitive dep of typer[all], but we import directly for console output
DEP003 = ["starlette", "rich"]

[tool.bandit]
targets = ["src"]

[tool.mutmut]
paths_to_mutate = [
    "src/worthless/adapters",
    "src/worthless/crypto",
]
also_copy = [
    "src/worthless/__init__.py",
    "src/worthless/exceptions.py",
    "src/worthless/cli",
    "src/worthless/proxy",
    "src/worthless/storage",
    "src/worthless.egg-info",
]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
include = ["src"]
exclude = ["**/__pycache__"]
# Basic mode catches real type errors without requiring full annotation coverage
typeCheckingMode = "basic"
# Strict mode on the crypto module — typed boundaries are a security guarantee
strict = ["src/worthless/crypto"]
